# livedocs-bridge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: claude_desktop_config.json  cline_mcp_config.json  cursor_mcp_config.json  quickstart.py
livedocs_bridge/: __init__.py  doctor.py  drift.py  install.py  markdown_to_html.py  platform_utils.py  playwright_core.py  self_test.py  server.py  tools.py
tests/: test_cdp_timeout.py  test_cross_platform.py  test_doctor.py  test_drift.py  test_install.py  test_platform_utils.py  test_playwright_core.py  test_self_test.py  test_tools_mock.py
