[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livedocs-bridge"
version = "0.3.4"
description = "Live edit Google Docs from your LLM agent. No OAuth. No SaaS. Just CDP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "HertzFlow Contributors", email = "noreply@hertzflow.xyz" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "google-docs",
    "playwright",
    "cdp",
    "llm",
    "agent",
    "claude",
    "cursor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "playwright>=1.40",
    "mcp>=1.0",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.10",
]

[project.scripts]
livedocs-bridge = "livedocs_bridge.server:main"

[project.urls]
Homepage = "https://github.com/HertzCOMM/livedocs-bridge"
Repository = "https://github.com/HertzCOMM/livedocs-bridge"
Issues = "https://github.com/HertzCOMM/livedocs-bridge/issues"

[tool.hatch.build.targets.wheel]
packages = ["livedocs_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
